# tri_photo_date

./: .gitignore  LICENSE  README (fr).md  README.md  TODO  build.bat  build.sh  pyproject.toml
hooks/: hook-pyexiv2.py
resources/: acknowledgments.md
resources/en/: about.md  acknowledgments.md  help.md
resources/fr/: about.md  acknowledgments.md  help.md
scripts/: update_localtisation.sh
tri_photo_date/: __main__.py  explore_db.py  ordonate_photos.py  photo_database.py  run.py  sort_photos.py
tri_photo_date/cli/: cli.py  cli_argparser.py  progressbar.py  shell.py
tri_photo_date/config/: config_loader.py  config_paths.py  config_types.py  default_config.ini  default_config.toml
tri_photo_date/exif/: __init__.py  exif.py  tags_description.py  usefull_tags.py
tri_photo_date/gps/: __init__.py  gps.py  gps_constants.py  gps_results.py
tri_photo_date/gui/: __init__.py  collapsible_frame.py  human_text.py  main_window.py  main_window_ui.py  menu.py  progressbar.py  small_widgets.py  speedprogressbar.py  speedprogressbar.py.old  sqlite_view.py  strftime_help.py
tri_photo_date/locales/en/LC_MESSAGES/: base.mo  base.po
tri_photo_date/locales/fr/LC_MESSAGES/: base.mo  base.po
tri_photo_date/messages/: strftime_help.html
tri_photo_date/messages/en/: about.md
tri_photo_date/utils/: config_loader.py  config_paths.py  constants.py  converter.py  fingerprint.py  human_texts.py  progressbar.py  small_tools.py
