[tool.poetry]
name = "tri-photo-date"
description = "Sort image using metadata placeholder"
authors = ["Daguhh"]
version = "0.1.2"
license = "LICENSE"
readme = "README.md"
packages = [{include = "tri_photo_date"}]
# Include license and readme files in the distribution package
include = ["resources/en/acknowledgments.md", "resources/en/help.md", "resources/en/about.md", "resources/fr/acknowledgments.md", "resources/fr/help.md", "resources/fr/about.md","resources/icon.ico", "LICENSE", "README.md", "resources/strftime_help.html"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
PyQt5 = "^5.15.9"
geopy = "^2.3.0"
pyexiv2 = "^2.8.1"
certifi = "^2023.5.7"
pyqtchart = "^5.15.6"
tomlkit = "^0.11.8"

[tool.poetry.group.speedbar]
optional = true

[tool.poetry.group.speedbar.dependencies]
pyqtgraph = "^0.13.3"

[tool.poetry.group.build_bin]
optional = true

[tool.poetry.group.build_bin.dependencies]
pyinstaller = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
#build = "poetry run pyinstaller main.py --collect-submodules application --onefile --name myapi"

[tool.poetry.scripts]
tri_photo_date = 'tri_photo_date.__main__:main'
