[tool.poetry]
name = "tri-photo-date"
description = "Sort image using metadata placeholder"
authors = ["Daguhh"]
version = "0.2.0"
license = "LICENSE"
readme = "README.md"
packages = [{include = "tri_photo_date"}]
# Include license and readme files in the distribution package
include = [
    "tri_photo_date/messages/en/acknowledgments.md",
    "tri_photo_date/messages/en/help.md",
    "tri_photo_date/messages/en/about.md",
    "tri_photo_date/messages/fr/acknowledgments.md",
    "tri_photo_date/messages/fr/help.md",
    "tri_photo_date/messages/fr/about.md",
    "tri_photo_date/resources/icon.ico",
    "LICENSE",
    "README.md",
    "tri_photo_date/messages/strftime_help.html"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
PyQt6 = "^6.10.0"
geopy = "^2.4.1"
pyexiv2 = "^2.15.5"
certifi = "^2025.10.5"
tomlkit = "^0.13.3"

# [tool.poetry.group.speedbar]
# optional = true
# 
# [tool.poetry.group.speedbar.dependencies]
# pyqtgraph = "^0.13.3"

[tool.poetry.group.build_bin]
optional = true

[tool.poetry.group.build_bin.dependencies]
pyinstaller = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
#build = "poetry run pyinstaller main.py --collect-submodules application --onefile --name myapi"

[tool.poetry.scripts]
tri_photo_date = 'tri_photo_date.__main__:main'
